[package]
name = "sceptr"
version = "0.1.0"
publish = false
authors = ["Jake Larson"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/bevy_dylib",
]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_audio",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    # "bevy/bevy_pbr",
    # "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    # "bevy/hdr",
    # "bevy/zstd",
    "bevy/x11",
    # "bevy/ktx2",
    "bevy/filesystem_watcher",
    # "bevy/tonemapping_luts"
    "bevy/vorbis",
    "bevy_rapier2d/simd-stable",
    "bevy_rapier2d/debug-render-2d"
]

[dependencies]
bevy = { version = "0.10.1", default-features = false }
bevy_asset_loader = { version = "0.16" }
rand = { version = "0.8" }
bevy_rapier2d = { version = "0.21.0" }
bevy_pkv = {version = "0.7", default-features = false }
# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "2.1"
